@@ -72,8 +72,8 @@ Summary of important user-visible changes for version 4.2:
     output argument is requested, instead the vector or array of
     interpolated values is always returned for Matlab compatibility.
 
- ** The new function "light" and corresponding graphics object provide
-    light and shadow effects for patch and surface objects.
+ ** The new function "light" and the corresponding graphics object
+    provide light and shadow effects for patch and surface objects.
 
  ** The surfnorm function now returns unnormalized (magnitude != 1)
     normal vectors for compatibility with Matlab.
@@ -110,6 +110,7 @@ Summary of important user-visible changes for version 4.2:
  ** Other new functions added in 4.2:
 
       audioformats
+      camlight
       deg2rad
       dialog
       evalc
